# nexu

./: .gitignore  Cargo.toml  Dioxus.toml  input.css  package.json
src/desktop/: Cargo.toml
src/desktop/assets/: main.css
src/desktop/src/: client.rs  controller.rs  main.rs  media_server.rs  message_handler.rs  topic_service.rs  utils.rs
src/mobile/: Cargo.toml
src/mobile/src/: main.rs
src/p2p/: Cargo.toml
src/p2p/src/: client.rs  lib.rs  messages.rs  protocol.rs  ticket.rs  types.rs  utils.rs
src/p2p_wasm/: Cargo.toml
src/ui/: Cargo.toml  build.rs
src/ui/assets/styling/: desktop.css  mobile.css
src/ui/src/: desktop.rs  lib.rs
src/ui/src/components/: mod.rs
src/ui/src/components/context_menu/: component.rs  style.css
src/ui/src/components/toast/: component.rs  mod.rs
src/ui/src/desktop/: chat.rs  columns.rs  details.rs  dialogs.rs  mod.rs  models.rs  utils.rs
src/ui/src/mobile/: mod.rs
src/web/: Cargo.toml
src/web/src/: main.rs
