[workspace]
resolver = "2"
members = [
    "src/ui",
    "src/web",
    "src/desktop",
    "src/mobile",
    "src/p2p",
    "src/p2p_wasm", "src/prueba",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
image = "0.25.8"

# workspace
ui = { path = "src/ui" }
p2p = { path = "src/p2p" }
p2p_wasm = { path = "src/p2p_wasm" }
