[workspace]
resolver = "2"
members = [
    "src/ui",
    "src/web",
    "src/desktop",
    "src/mobile",
    "src/p2p",
    "src/p2p_wasm",
]

[workspace.dependencies]
dioxus = { version = "0.7.2" }
image = "0.25.9"
tokio = { version = "1.48.0", features = ["full", "test-util"] }
anyhow = "1.0.100"
chrono = "0.4.42"
bitcode = "0.6.7"
base64 = "0.22.1"
flume = "0.12.0"
serde = "1.0.228"
postcard = "1.1.3"
# workspace
ui = { path = "src/ui" }
p2p = { path = "src/p2p" }
p2p_wasm = { path = "src/p2p_wasm" }
