[package]
name = "desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = [] }
ui = { workspace = true, features = ["desktop-web"] }
image = { workspace = true }
p2p = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
chrono = { workspace = true }
bitcode = { workspace = true }
dirs = "6.0.0"
base64 = { workspace = true }
flume = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
