[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = { version = "0.95.1", features = [] }
iroh-gossip = "0.95.0"
futures-lite = "2.6.1"
tokio = { workspace = true, features = ["full", "test-util"] }
serde = "1.0.228"
serde_json = "1.0.145"
anyhow = { workspace = true }
rand = "0.9.2"
data-encoding = "2.9.0"
serial_test = "3.2.0"

