[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = { version = "0.95.1", features = [] }
iroh-gossip = "0.95.0"
futures-lite = "2.6.1"
tokio = { workspace = true, features = ["full", "test-util"] }
serde = {version = "1.0.228", features=["derive"]}
anyhow = { workspace = true }
rand = "0.9.2"
data-encoding = "2.9.0"
serial_test = "3.2.0"
postcard = "1.1.3"
bs58 = "0.5.1"

[dev-dependencies]
tempfile = "3.14.0"
