[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = { version = "0.95.1", features = [] }
iroh-gossip = "0.95.0"
iroh-blobs = "0.97.0"
futures-lite = "2.6.1"
tokio = { workspace = true, features = ["full", "test-util"] }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
rand = "0.9.2"
serial_test = "3.2.0"
postcard = { workspace = true }
bs58 = "0.5.1"
flume = { workspace = true }

[dev-dependencies]
tempfile = "3.14.0"
