[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[features]
desktop-web = []
mobile = []

[dependencies]
dioxus = { workspace = true }
chrono = { workspace = true }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
arboard = "3.6.1"
bitcode = { workspace = true }
base64 = "0.22.1"

