[package]
name = "ui"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[dependencies]
dioxus = { workspace = true }
chrono = { workspace = true }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
arboard = { version = "3.6.1", features = [
    "wayland-data-control",
    "windows-sys",
    "wl-clipboard-rs",
] }
serde = { workspace = true, features = ["derive"] }
base64 = "0.22.1"
open = "5.3.3"
image = { workspace = true, features = ["webp"] }
anyhow = { workspace = true }
rfd = { version = "0.17.2", features = ["wayland"] }
dirs = { workspace = true }
tokio = "1.49.0"
infer = "0.19.0"
