[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = [] }
ui = { workspace = true, features = ["desktop-web", "mobile"] }
web-sys = {version = "0.3.82", features = ["Navigator", "Window"]}
p2p_wasm = { workspace = true }

[features]
default = ["web"]
web = ["dioxus/web"]
